<resources>
    <string name="app_name">Pro Invoice Generator</string>
    <string name="use_no_currency">Use No Currency</string>
    <string name="create_own_currency">Create Own Currency</string>
    <string name="emirati_dirham">AED (Emirati Dirham)</string>
    <string name="afghan_afghani">AFN (Afghan Afghani)</string>
    <string name="albanian_lef">ALL (Albanian Lef)</string>
    <string name="armenian_dram">AMD (Armenian Dram)</string>
    <string name="angolan_kwanza">AOA (Angolan Kwanza)</string>
    <string name="argentine_peso">ARS (Argentine Peso)</string>
    <string name="australian_dollar">AUD (Australian Dollar)</string>
    <string name="aruban_florin">AWG (Aruban Florin)</string>
    <string name="azerbaijan_new_manat">AZN (Azerbaijan New Manat)</string>
    <string name="bosnian_mark">BAM (Bosnian Mark)</string>
    <string name="barbados_dollar">BBD (Barbados Dollar)</string>
    <string name="bangladeshi_taka">BDT (Bangladeshi Taka)</string>
    <string name="bulgarian_lev">BGN (Bulgarian Lev)</string>
    <string name="dahraini_dinar">BBH (Dahraini Dinar)</string>
    <string name="burundi_franc">BIF (Burundi Franc)</string>
    <string name="bermudian_dollar">BMD (Bermudian Dollar)</string>
    <string name="bruneian_dollar">BND (Bruneian Dollar)</string>
    <string name="bolivian_boliviano">BOB (Bolivian Boliviano)</string>
    <string name="brazilian_real">BRL (Brazilian Real)</string>
    <string name="bahamian_dollar">BSD (Bahamian Dollar)</string>
    <string name="bhutan_ngultrum">BTN (Bhutan Ngultrum)</string>
    <string name="botswana_pula">BWP (Botswana Pula)</string>
    <string name="belarusian_ruble">BYR (Belarusian Ruble)</string>
    <string name="belize_dollar">BZD (Belize Dollar)</string>
    <string name="canadian_dollar">CAD (Canadian Dollar)</string>
    <string name="swiss_franc">CHF (Swiss Franc)</string>
    <string name="chilean_peso">CLP (Chilean Peso)</string>
    <string name="colombian_peso">COP (Colombian Peso)</string>
    <string name="costa_rican_colon">CRC (Costa Rican Colon)</string>
    <string name="cape_verde_escudo">CVE (Cape Verde Escudo)</string>
    <string name="czech_koruna">CZK (Czech Koruna)</string>
    <string name="djibouti_franc">DJF (Djibouti Franc)</string>
    <string name="danish_krone">DKK (Danish Krone)</string>
    <string name="dominican_peso">DOP (Dominican Peso)</string>
    <string name="algerian_dinar">DZD (Algerian Dinar)</string>
    <string name="egypian_pound">EGP (Egypian Pound)</string>
    <string name="eritrean_nakfa">ERN (Eritrean Nakfa)</string>
    <string name="ethiopian_birr">ETB (Ethiopian Birr)</string>
    <string name="euro">EUR (Euro)</string>
    <string name="fijian_dollar">FJD (Fijian Dollar)</string>
    <string name="falkland_islands_pound">FKP (Falkland Islands Pound)</string>
    <string name="british_pound">GBP (British Pound)</string>
    <string name="georgian_lari">GEL (Georgian Lari)</string>
    <string name="ghanaian_cedi">GHS (Ghanaian Cedi)</string>
    <string name="gibraltar_pound">GIP (Gibraltar Pound)</string>
    <string name="gambian_dalasi">GMD (Gambian Dalasi)</string>
    <string name="guinea_franc">GNF (Guinea Franc)</string>
    <string name="guatemalan_quetzal">GTQ (Guatemalan Quetzal)</string>
    <string name="guyanan_dollar">GYD (Guyanan Dollar)</string>
    <string name="hong_kong_dollar">HKD (Hong Kong Dollar)</string>
    <string name="honduran_lempira">HNL (Honduran Lempira)</string>
    <string name="croatian_kuna">HRK (Croatian Kuna)</string>
    <string name="haitian_gourde">HTG (Haitian Gourde)</string>
    <string name="hungarian_forint">HUF (Hungarian Forint)</string>
    <string name="indonesian_rupiah">IDR (Indonesian Rupiah)</string>
    <string name="israeli_shekel">ILS (Israeli Shekel)</string>
    <string name="indian_rupee">INR (Indian Rupee)</string>
    <string name="iraqiDinar">IQD (Iraqi Dinar)</string>
    <string name="icelandKrona">ISK (Iceland Krona)</string>
    <string name="jamaicanDollar">JMD (Jamaican Dollar)</string>
    <string name="jordanianDinar">JOD (Jordanian Dinar)</string>
    <string name="japaneseYen">JPY (Japanese Yen)</string>
    <string name="kenyanShilling">KES (Kenyan Shilling)</string>
    <string name="comoros_franc">KMF (Comoros Franc)</string>
    <string name="southKoreanWon">KRW (South Korean Won)</string>
    <string name="kuwaitiDinar">KWD (Kuwaiti Dinar)</string>
    <string name="caymanIslandsDollar">KYD (Cayman Islands Dollar)</string>
    <string name="kazakhstaniTenge">KZT (Kazakhstani Tenge)</string>
    <string name="laoKip">LAK (Lao Kip))</string>
    <string name="lebanesePound">LBP (Lebanese Pound)</string>
    <string name="sriLankanRupee">LKR (Sri Lankan Rupee)</string>
    <string name="lesothoLoti">LSL (Lesotho Loti)</string>
    <string name="libyanDinar">LYD (Libyan Dinar)</string>
    <string name="moroccanDirham">MAD (Moroccan Dirham)</string>
    <string name="moldovanLeu">MDL (Moldovan Leu)</string>
    <string name="myanmarKyat">MMK (Myanmar Kyat)</string>
    <string name="mongolianTugrik">MNT (Mongolian Tugrik)</string>
    <string name="macauPataca">MOP (Macau Pataca)</string>
    <string name="mauritianRupee">MUR (Mauritian Rupee)</string>
    <string name="maldiveRufiyaa">MVR (Maldive Rufiyaa)</string>
    <string name="mexicanPeso">MXN (Mexican Peso)</string>
    <string name="malaysianRinggit">MYR (Malaysian Ringgit)</string>
    <string name="namibiaDollar">NAD (Namibia Dollar)</string>
    <string name="nigerianNaira">NGN (Nigerian Naira)</string>
    <string name="nicaraguanCordobaOro">NIO (Nicaraguan Cordoba Oro)</string>
    <string name="nepaleseRupee">NPR (Nepalese Rupee)</string>
    <string name="newZealandDollar">NZD (New Zealand Dollar)</string>
    <string name="omaniRial">OMR (Omani Rial)</string>
    <string name="panamanianBalboa">PAB (Panamanian Balboa)</string>
    <string name="peruvianSol">PEN (Peruvian Sol)</string>
    <string name="papuaNewGuineaKina">PGK (Papua New Guinea Kina)</string>
    <string name="philippinePeso">PHP (Philippine Peso)</string>
    <string name="polishZloty">PLN (Polish Zloty)</string>
    <string name="paraguayGuarani">PYG (Paraguay Guarani)</string>
    <string name="qatariRiyal">QAR (Qatari Riyal)</string>
    <string name="romanianNewLeu">RON (Romanian New Leu)</string>
    <string name="serbianDinar">RSD (Serbian Dinar)</string>
    <string name="russianRuble">RUB (Russian Ruble)</string>
    <string name="rwandanFranc">RWF (Rwandan Franc)</string>
    <string name="saudiArabianRiyal">SAR (Saudi Arabian Riyal)</string>
    <string name="solomonIslandsDollar">SBD (Solomon Islands Dollar)</string>
    <string name="seychellesRupee">SCR (Seychelles Rupee)</string>
    <string name="swedishKrona">SEK (Swedish Krona)</string>
    <string name="singaporeDollar">SGD (Singapore Dollar)</string>
    <string name="StHelenaPound">SHP (St. Helena Pound)</string>
    <string name="sierraLeoneLeone">SLL (Sierra Leone Leone)</string>
    <string name="somaliShilling">SOS (Somali Shilling)</string>
    <string name="surinameDollar">SRD (Suriname Dollar)</string>
    <string name="saoTomePrincipeDobra">STD (Sao Tome/Principe Dobra)</string>
    <string name="elSalvadorColon">SVC (El Salvador Colon)</string>
    <string name="swaziLilangeni">SZL (Swazi Lilangeni)</string>
    <string name="thaiBaht">THB (Thai Baht)</string>
    <string name="TajikistanSomoni">TJS (Tajikistan Somoni)</string>
    <string name="turkmenistanNewManat">TMT (Turkmenistan New Manat)</string>
    <string name="tunisianDinar">TND (Tunisian Dinar)</string>
    <string name="Tongan">TOP (Tongan Pa&amp;anga)</string>
    <string name="turkishLira">TRY (Turkish Lira)</string>
    <string name="trinidadianDollar">TTD (Trinidadian Dollar)</string>
    <string name="taiwanDollar">TWD (Taiwan Dollar)</string>
    <string name="tanzanianShilling">TZS (Tanzanian Shilling)</string>
    <string name="ukrainianHryvnia">UAH (Ukrainian Hryvnia)</string>
    <string name="ugandaShilling">UGX (Uganda Shilling)</string>
    <string name="uSDollar">USD (US Dollar)</string>
    <string name="uzbekistanSom">UZS (Uzbekistan Som)</string>
    <string name="uruguayanPeso">UYU (Uruguayan Peso)</string>
    <string name="vietnameseDong">VND (Vietnamese Dong)</string>
    <string name="vanuatuVatu">VUV (Vanuatu Vatu)</string>
    <string name="yemenrial">YER (Yemen Rial)</string>
    <string name="southAfricanRand">ZAR (South African Rand)</string>
    <string name="pakistanirupee">PKR (Pakistani Rupee)</string>
    <string name="printed_invoices_title">Printed Invoices</string>
    <string name="my_items_title">My Items</string>
    <string name="favourite_customers_title">Customers</string>
    <string name="business_info_settings_title">Business Settings</string>
    <string name="output_image_quality_title">Output Image Quality</string>
    <string name="about_this_app_title">About</string>
    <string name="rate_us_title">Rate Us</string>
    <string name="share_with_friends_title">Share</string>
    <string name="how_to_use_title">Manual</string>
    <string name="generate_invoices_in_seconds_title">Generate invoices on the goo</string>
    <string name="invoice_generator">Invoice Generator</string>
    <string name="invoice_generator1">Billing App</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="developed_by_epicSoft">Developed by EpicSoft</string>
    <string name="output_image_quality_dialog_main">Output image quality</string>
    <string name="higher_image_quality_will_use_more_storage_dialog_main">Higher image quality will use more storage.</string>
    <string name="high_dialog_main">High</string>
    <string name="medium_dialog_main">Medium</string>
    <string name="low_dialog_main">Low</string>
    <string name="cancel_dialog_main">Cancel</string>
    <string name="ok_dialog_main">OK</string>
    <string name="delete_item_dialog_delete">Delete Item?</string>
    <string name="are_you_sure_you_want_to_delete_this_item_this_cannot_be_undone_dialog_delete">Are you sure you want to delete this item? This cannot be undone.</string>
    <string name="cancel_dialog_delete">Cancel</string>
    <string name="delete_dialog_delete">Delete</string>
    <string name="default_font_choose_font">Default font</string>
    <string name="poppins_normal">Poppins</string>
    <string name="montserrat_regular">Montserrat</string>
    <string name="inter_regular">Inter</string>
    <string name="roboto_regular">Roboto</string>
    <string name="moulpali_regular">Moulpali</string>
    <string name="murecho_regular">Murecho</string>
    <string name="mplus1p_regular">Mplus1p</string>
    <string name="port_lligat_sans_regular">PortLligatSans</string>
    <string name="pontano_sans_regular">PontanoSans</string>
    <string name="poly_regular">Poly</string>
    <string name="shop_title_font_choose_font">Shop Title Font</string>
    <string name="set_choose_font">Set</string>
    <string name="cancel_choose_font">Cancel</string>
</resources>