<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_about_gradiant"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_normal"
            android:text="@string/invoice_generator"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_app_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_normal"
            android:text="@string/invoice_generator1"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_generate_invoice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_normal"
            android:text="@string/generate_invoices_in_seconds_title"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_about_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_about_icon" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_normal"
            android:text="@string/version_1_0"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dev_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/poppins_normal"
            android:text="@string/developed_by_epicSoft"
            android:textAlignment="center"
            android:textColor="@color/my_white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />


    </LinearLayout>
</layout>
